--- a/DoorofSoul.Library/DoorofSoul.Library.csproj
+++ b/DoorofSoul.Library/DoorofSoul.Library.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Knowledge.cs" />
     <Compile Include="KnowledgeComponents\HeptagramSystems\TechnologySystem.cs" />
     <Compile Include="KnowledgeComponents\HexagramKnowledgeInterface.cs" />
+    <Compile Include="KnowledgeComponents\SkillManager.cs" />
+    <Compile Include="KnowledgeComponents\StatusEffectManager.cs" />
     <Compile Include="Nature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvidenceEye.cs" />
