--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -52,9 +52,12 @@
     <Compile Include="KnowledgeComponents\StatusEffect.cs" />
     <Compile Include="KnowledgeComponents\StatusEffects\ContainerStatusEffectInfo.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformContainerStatusEffectInfoChangeHandler.cs" />
+    <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformItemEntityChangeHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\FetchData\FetchContainerStatusEffectInfosHandler.cs" />
     <Compile Include="LightComponents\Communications\Responses\Handlers\Container\FetchData\FetchContainerStatusEffectInfosResponseHandler.cs" />
     <Compile Include="NatureComponents\ContainerElements\ContainerStatusEffectManager.cs" />
+    <Compile Include="NatureComponents\SceneElements\ItemEntity.cs" />
+    <Compile Include="NatureComponents\SceneElements\ItemEntityManager.cs" />
     <Compile Include="ThroneComponents\Answer.cs" />
     <Compile Include="BasicTypeHelpers\DSDecimal.cs" />
     <Compile Include="NatureComponents\Container.cs" />
@@ -256,7 +259,6 @@
     <Folder Include="LightComponents\Communications\Events\Handlers\Answer\InformData\" />
     <Folder Include="LightComponents\Communications\Events\Handlers\Entity\InformData\" />
     <Folder Include="LightComponents\Communications\Events\Handlers\Player\InformData\" />
-    <Folder Include="LightComponents\Communications\Events\Handlers\Scene\InformData\" />
     <Folder Include="LightComponents\Communications\Events\Handlers\World\InformData\" />
     <Folder Include="LightComponents\Communications\Operations\Handlers\Entity\FetchData\" />
     <Folder Include="LightComponents\Communications\Operations\Handlers\World\FetchData\" />
