--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -89,6 +89,7 @@
     <Compile Include="InformDataParameters\Container\InformLifePointChangeParameterCode.cs" />
     <Compile Include="InformDataParameters\Container\InformContainerStatusEffectInfoChangeParameterCode.cs" />
     <Compile Include="InformDataParameters\Container\InformMessageParameterCode.cs" />
+    <Compile Include="InformDataParameters\Scene\InformItemEntityChangeParameterCode.cs" />
     <Compile Include="InformDataParameters\Soul\InformCorePointChangeParameterCode.cs" />
     <Compile Include="InformDataParameters\Soul\InformSpiritPointChangeParameterCode.cs" />
     <Compile Include="OperationCodes\AnswerOperationCode.cs" />
@@ -150,7 +151,6 @@
     <Folder Include="InformDataParameters\Answer\" />
     <Folder Include="InformDataParameters\Entity\" />
     <Folder Include="InformDataParameters\Player\" />
-    <Folder Include="InformDataParameters\Scene\" />
     <Folder Include="InformDataParameters\World\" />
     <Folder Include="ResponseParameters\Container\" />
     <Folder Include="ResponseParameters\Entity\" />
