Partial PickupItemEntity And Refactor Hexagram Namespace

--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -114,6 +114,7 @@
     <Compile Include="OperationParameters\Answer\SoulOperationParameterCode.cs" />
     <Compile Include="FetchDataParameters\FetchDataParameterCode.cs" />
     <Compile Include="OperationParameters\Container\ObserveEntityPositionParameterCode.cs" />
+    <Compile Include="OperationParameters\Container\PickupItemEntityParameterCode.cs" />
     <Compile Include="OperationParameters\Container\SayParameterCode.cs" />
     <Compile Include="OperationParameters\Entity\MoveParameterCode.cs" />
     <Compile Include="OperationParameters\Entity\RotateParameterCode.cs" />
