--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -54,9 +54,11 @@
     <Compile Include="LightComponents\Communications\Events\Handlers\Container\InformData\InformContainerStatusEffectInfoChangeHandler.cs" />
     <Compile Include="LightComponents\Communications\Events\Handlers\Scene\InformData\InformItemEntityChangeHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Container\FetchData\FetchContainerStatusEffectInfosHandler.cs" />
+    <Compile Include="LightComponents\Communications\Operations\Handlers\Container\PickupItemEntityHandler.cs" />
     <Compile Include="LightComponents\Communications\Operations\Handlers\Scene\FetchData\FetchItemEntitiesHandler.cs" />
     <Compile Include="LightComponents\Communications\Responses\Handlers\Container\FetchData\FetchContainerStatusEffectInfosResponseHandler.cs" />
     <Compile Include="LightComponents\Communications\Responses\Handlers\Scene\FetchData\FetchItemEntitiesResponseHandler.cs" />
+    <Compile Include="LightComponents\KnowledgeInterface.cs" />
     <Compile Include="NatureComponents\ContainerElements\ContainerStatusEffectManager.cs" />
     <Compile Include="NatureComponents\SceneElements\ItemEntity.cs" />
     <Compile Include="NatureComponents\SceneElements\ItemEntityManager.cs" />
@@ -233,7 +235,7 @@
     <Compile Include="NatureComponents\Scene.cs" />
     <Compile Include="NatureComponents\SceneElements\MessageLog.cs" />
     <Compile Include="NatureComponents\SceneElements\SceneEye.cs" />
-    <Compile Include="KnowledgeComponents\Skills\SkillKnowledgeInterface.cs" />
+    <Compile Include="LightComponents\Knowledge\SkillKnowledgeInterface.cs" />
     <Compile Include="ThroneComponents\Soul.cs" />
     <Compile Include="KnowledgeComponents\Skills\SkillInfo.cs" />
     <Compile Include="KnowledgeComponents\Skills\SkillLibrary.cs" />
