--- a/DoorofSoul.Library/DoorofSoul.Hexagram.csproj
+++ b/DoorofSoul.Library/DoorofSoul.Hexagram.csproj
@@ -52,14 +52,14 @@
     <Compile Include="KnowledgeComponents\HeptagramSystems\DemonSystem.cs" />
     <Compile Include="KnowledgeComponents\HeptagramSystems\ElementSystem.cs" />
     <Compile Include="KnowledgeComponents\HeptagramSystems\GenieSystem.cs" />
-    <Compile Include="KnowledgeComponents\HeptagramSystems\HeptagramSkillKnowledgeInterface.cs" />
+    <Compile Include="LightComponents\Skills\HexagramSkillInterface.cs" />
     <Compile Include="KnowledgeComponents\HeptagramSystems\HeptagramSystem.cs" />
     <Compile Include="HexagramWorldCommunicationInterface.cs" />
     <Compile Include="Knowledge.cs" />
     <Compile Include="KnowledgeComponents\HeptagramSystems\TechnologySystem.cs" />
-    <Compile Include="KnowledgeComponents\HexagramKnowledgeInterface.cs" />
     <Compile Include="KnowledgeComponents\SkillManager.cs" />
     <Compile Include="KnowledgeComponents\StatusEffectManager.cs" />
+    <Compile Include="LightComponents\HexagramKnowledgeInterface.cs" />
     <Compile Include="Nature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvidenceEye.cs" />
